# cookie_django

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .codeclimate.yml  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/authentication/templates/authentication/: password_reset_email.txt
{{ cookiecutter.project_slug }}/chat/: apps.py  consumers.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py  ws_permissions.py
{{ cookiecutter.project_slug }}/chat/fixtures/: chat.json  users.json
{{ cookiecutter.project_slug }}/chat/migrations/: 0001_initial.py  0002_chatmessage.py  0003_chatmessage_deleted.py
{{ cookiecutter.project_slug }}/chat/tests/: test_chat_message.py  test_create_chat.py
{{ cookiecutter.project_slug }}/config/: routing.py  urls.py  views.py
{{ cookiecutter.project_slug }}/config/settings/: base.py  development.py  environ.py  production.py
{{ cookiecutter.project_slug }}/deploy/: create_services.sh  {{ cookiecutter.site_url }}
{{ cookiecutter.project_slug }}/deploy/nginx/: nginx.dev
{{ cookiecutter.project_slug }}/deploy/nginx/sites-available/: {{ cookiecutter.site_url }}
{{ cookiecutter.project_slug }}/utils/: fields.py  images.py  jwt.py  middleware.py
{{ cookiecutter.project_slug }}/utils/channels/: consumers.py  middleware.py  mixins.py  permissions.py  users.py
{{ cookiecutter.project_slug }}/utils/tests/: __init__.py  models.py  serializers.py
