[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = ">=2.2.7"
djangorestframework = "^3.11.0"
djangorestframework-jwt = "^1.11.0"
channels = "^2.4.0"
redis = "^3.5.3"
requests = "^2.24.0"
dj_database_url = "^0.5.0"
uvicorn = "^0.11.8"
celery = "^4.4.7"
django-celery-results = "^1.2.1"
django-celery-beat = "^2.0.0"
django-extensions = "^2.2.5"
django-filter = "^2.0.0"

[tool.poetry.dev-dependencies]
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
